Wed Jul  9 22:00:01 2003  Soeren Sandmann  <sandmann@daimi.au.dk>

	* Lots of new stuff. Highlights:

		- Rewritten profiling module, that handles 
		  recursion better 
		- Profle view ported to GtkTreeView
		- New leak icon
		- New reset button

2003-06-17  Guntupalli Karunakar  <karunakar@freedomink.org>

	* configure.in: Added "ml" to ALL_LINGUAS.

2003-05-06  Danilo Šegan  <dsegan@gmx.net>

	* configure.in: Added "sr" and "sr@Latn" to ALL_LINGUAS.

2003-04-24  Abel Cheung  <maddog@linux.org.hk>

	* configure.in: Fix broken configure.in caused by previous commit.

2003-02-20  Dmitry G. Mastrukov  <dmitry@taurussoft.org>

	* configure.in: Added Belarusian to ALL_LINGUAS.

2003-02-03  Daniel Yacob  <locales@geez.org>

	* configure.ac: Added "am" (Amharic) to ALL_LINGUAS.

Fri Jan 24 15:18:24 2003  Owen Taylor  <otaylor@redhat.com>

	* bfdutils.c (read_bfd): Fix a memory leak.

Fri Jan 24 12:31:47 2003  Owen Taylor  <otaylor@redhat.com>

	* bfdutils.c (find_separate_debug_file): Add support
	for separate debug info files pointed to be 
	.gnu.debuglink sections, as supported by current GDB.

	* configure.in: Add --with-separate-debug-dir.

	* acinclude.m4: AC_DEFINE_DIR()

	* acconfig.h: Remove.

2002-12-23  Artis Trops  <hornet@navigator.lv>

	* configure.in: Added Latvian (lv) to ALL_LINGUAS.

2002-11-12  Kjartan Maraas  <kmaraas@gnome.org>

	* main.c (set_white_bg): Don't leak the style.
	
2002-11-09  Fatih Demir <kabalak@gtranslator.org>

	* configure.in: Added "ta" (Tamil) language to the languages' list.

2002-10-01  Stanislav Brabec  <sbrabec@suse.cz>

	* configure.in: Added cs to ALL_LINGUAS.

Thu Sep 19 14:30:31 2002  Owen Taylor  <otaylor@redhat.com>

	* memintercept-utils.c (mi_atomic_[increment/decrement]): Fix
	wrong in the non-atomic fallback case. (#93670, 
	Christian Marillat)

2002-09-10  James Henstridge  <james@daa.com.au>

	* server.c (find_lib_location): variable definitions need to go at
	the top of the function.
